[package]
name = "builtin_interfaces"
version = "2.0.2"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.4"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde']
