[package]
name = "diagnostic_msgs"
version = "5.3.5"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.4"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }
std_msgs = "*"
service_msgs = "*"
builtin_interfaces = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'std_msgs/serde', 'service_msgs/serde', 'builtin_interfaces/serde']
